調整BUG跟商品庫存設定

--- a/StarProject/Views/Product/Article.cshtml
+++ b/StarProject/Views/Product/Article.cshtml
@@ -168,7 +168,7 @@
 
         <div class="form-group d-flex gap-3 mt-3 text-distance justify-content-center">
             <button type="submit" class="btn btn-topbar fw-bold fs-5 text-distance" style="width:303px">
-                <i class="fa-solid fa-plus"></i>保存變更
+                <i class="fa-solid fa-file"></i> 保存變更
             </button>
             <a asp-action="Index" class="btn btn-outline-back fw-bold fs-5" style="width:303px">返回列表</a>
         </div>
