--- a/StarProject/Views/Product/Index.cshtml
+++ b/StarProject/Views/Product/Index.cshtml
@@ -17,7 +17,6 @@
     <!-- 標題+新增 -->
     <div class="d-flex align-items-center mb-3">
         <h1 class="fw-bold flex-grow-1 mb-0">商品查詢</h1>
-        <a asp-action="Create" class="btn btn-search fw-bold"><i class="fa-solid fa-plus"></i> 新增</a>
     </div>
 
     <!-- CSRF Token -->
@@ -256,14 +255,14 @@
                 </div>
             </div>
             <div class="offcanvas-body flex-column">
-                <div class="d-flex justify-content-end mb-3">
+                <div class="d-flex justify-content-end mt-2 mb-3">
                     <a id="offcanvasArtBtn" class="btn br20px btn-color"><i class="fa-solid fa-pen-to-square"></i>編輯介紹</a>
                 </div>
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators" id="carouselIndicators">
                         
                     </div>
-                    <div class="carousel-inner" id="carouselInner">
+                    <div class="carousel-inner mb-3" id="carouselInner">
                         
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
