更改首頁四格顏色、登入icon、修改部門

--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -133,7 +133,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="MG" id="dept8">
                                     <label class="form-check-label" for="dept8">
-                                        導覽服務部
+                                        天文館總管
                                     </label>
                                 </div>
                             </div>
