--- a/StarProject/Views/Home/Index.cshtml
+++ b/StarProject/Views/Home/Index.cshtml
@@ -236,34 +236,34 @@
     }
 
     .card-darkblue {
-        color: #423A3A;
-        border: solid 1px #89BEEB;
+        color: whitesmoke;
+        border: solid 1px #EC7357;
         padding: 20px;
         border-radius: 26px;
-        background: #89BEEB;
+        background: #EC7357;
     }
 
     .card-user {
         color: #423A3A;
-        border: solid 1px #DCDCDC;
+        border: solid 1px #FEEE7D;
         padding: 20px;
-        background: #DCDCDC;
+        background: #FEEE7D;
         border-radius: 26px;
     }
 
     .card-money {
-        color: #423A3A;
-        border: solid 1px #C0C6DD;
+        color: whitesmoke;
+        border: solid 1px #60C5BA;
         padding: 20px;
-        background-color: #C0C6DD;
+        background-color: #60C5BA;
         border-radius: 26px;
     }
 
     .card-stock {
         color: #423A3A;
-        border: solid 1px #FEA757;
+        border: solid 1px #A5DFF9;
         padding: 20px;
-        background-color: #FEA757;
+        background-color: #A5DFF9;
         border-radius: 26px;
     }
 
@@ -304,12 +304,12 @@
                 <div class="card shadow-sm text-center p-3 card-darkblue card-size">
                     <i class="bi bi-cart-check fs-1"></i>
                     <h5 class="card-title mt-2 fw-bold">本月訪客數</h5>
-                    <p class="card-text">1200人</p>
+                    <p class="card-text">36000人</p>
                 </div>
                 <div class="card shadow-sm text-center p-3 card-money card-size">
                     <i class="bi bi-cash-coin fs-1"></i>
                     <h5 class="card-title mt-2 fw-bold">累計營收</h5>
-                    <p class="card-text">$15,000</p>
+                    <p class="card-text">$150,000</p>
                 </div>
                 <div class="card shadow-sm text-center p-3 card-user card-size">
                     <i class="bi bi-people fs-1"></i>
