--- a/StarProject/Views/Login/Index.cshtml
+++ b/StarProject/Views/Login/Index.cshtml
@@ -14,6 +14,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星航基地後台系統</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="~/img/logo.png" asp-append-version="true" />
+    <link rel="shortcut icon" type="image/png" href="~/img/logo.png" asp-append-version="true" />
+    <link rel="apple-touch-icon" href="~/img/logo.png" />
+    <meta name="theme-color" content="#2B4C8C" />
 
     <style>
         /* === 基礎重置樣式 === */
