--- a/StarProject/Views/Promotion/Create.cshtml
+++ b/StarProject/Views/Promotion/Create.cshtml
@@ -28,7 +28,7 @@
 
 
 <div class="card shadow-sm">
-    <div class="card-header bg-primary text-white">
+    <div class="card-header text-white" style="background-color: #2B4C8C">
         <h4 class="mb-0"><i class="fi fi-ss-money-wings me-2"></i>新增優惠券</h4>
     </div>
 
